--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
     "axios": "^0.15.3",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^4.1.0",
+    "es6-promise": "^4.2.5",
     "express": "^4.16.3",
     "express-session": "^1.15.1",
     "history": "^4.6.3",
+    "iex-api": "0.0.3",
+    "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.20.2",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
@@ -77,6 +80,7 @@
     "@babel/preset-env": "^7.0.0-beta.55",
     "@babel/preset-react": "^7.0.0-beta.55",
     "@babel/register": "^7.0.0-beta.55",
+    "@types/isomorphic-fetch": "0.0.34",
     "axios-mock-adapter": "^1.15.0",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^8.0.0-beta.4",
