--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.15.3",
+    "axios": "^0.19.0",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^4.1.0",
+    "dotenv": "^8.0.0",
     "es6-promise": "^4.2.5",
     "express": "^4.16.3",
     "express-session": "^1.15.1",
@@ -66,8 +67,8 @@
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.55",
-    "@babel/plugin-proposal-class-properties": "7.0.0-beta.54",
+    "@babel/core": "^7.5.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
     "@babel/plugin-proposal-decorators": "7.0.0-beta.54",
     "@babel/plugin-proposal-export-namespace-from": "7.0.0-beta.54",
     "@babel/plugin-proposal-function-sent": "7.0.0-beta.54",
@@ -77,7 +78,7 @@
     "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.54",
     "@babel/plugin-syntax-import-meta": "7.0.0-beta.54",
     "@babel/polyfill": "^7.0.0-beta.55",
-    "@babel/preset-env": "^7.0.0-beta.55",
+    "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0-beta.55",
     "@babel/register": "^7.0.0-beta.55",
     "@types/isomorphic-fetch": "0.0.34",
@@ -85,8 +86,8 @@
     "babel-eslint": "^8.2.6",
     "babel-loader": "^8.0.0-beta.4",
     "chai": "^3.5.0",
-    "enzyme": "^3.0.0",
-    "enzyme-adapter-react-16": "^1.0.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^4.19.1",
     "eslint-config-fullstack": "^5.1.0",
     "eslint-config-prettier": "^2.9.0",
